--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -90,5 +90,37 @@
   .grid {
     width: 100%;
     flex-direction: column;
+    margin-top: 0;
+    align-items: flex-start;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    text-align: left;
+  }
+
+  .description { 
+    font-size: 1rem;
+  }
+
+  .main {
+    padding-top: 0;
+    align-items: flex-start;
+  }
+
+  .card {
+    margin: 0.5rem 0rem;
+    padding: 1rem;
+    width: 75%;
+  }
+
+  .card p {
+    margin: 0;
+    font-size: 1rem;
+    line-height: 0;
+  }
+
+  .card h2 {
+    font-size: 1rem;
   }
 }
