--- a/styles/Twitter.module.css
+++ b/styles/Twitter.module.css
@@ -47,17 +47,19 @@
     padding: 0px 10px;
     font-size: large;
     border-radius: 0.4rem;
+    margin: 10px;
 }
 
 .countryFilterWrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
+    align-items: center;
 }
 
 .countryFilterItem {
     padding: 8px;
-    margin: 0.4rem 0.8rem 0.4rem 0;
+    margin: 0.4rem 0.8rem 0.6rem 0;
     background-color: #f8eded;
     color: #2e2e2e;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -67,4 +69,15 @@
 .countryFilterItem:hover {
     background-color: #0070f3;
     color: white;
+}
+
+@media (max-width: 600px) {
+    .locationInput {
+        margin: 10px 0;
+    }
+
+    .subTitle {
+        font-size: 1rem;
+        margin: 0;
+    }
 }
